fix codebox wrapping, css loading order

--- a/styles/pbwow3/theme/content.css
+++ b/styles/pbwow3/theme/content.css
@@ -589,6 +589,7 @@ blockquote .codebox {
 	display: block;
 	height: auto;
 	max-height: 200px;
+	white-space: normal;
 	padding-top: 5px;
 	font: 0.9em Monaco, "Andale Mono","Courier New", Courier, monospace;
 	line-height: 1.3em;
